<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minHeight="2000dp"
    android:minWidth="2000dp"
    tools:context="uni.edu.juegosdelhambre.ui.PauseDialogFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llTop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_weight="0.50"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="@dimen/activity_word_search_indicator_text_title_size" />

                <TextView
                    android:id="@+id/tvTimePause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="@dimen/activity_word_search_indicator_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_weight="0.50"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textSize="@dimen/activity_word_search_indicator_text_title_size" />

                <TextView
                    android:id="@+id/tvScorePause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="@dimen/activity_word_search_indicator_text_size" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnResume"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/resume" />

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/restart" />

        <Button
            android:id="@+id/btnExitToMenu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:text="@string/exit" />

    </LinearLayout>


</RelativeLayout>
