<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="190dp"
            android:layout_height="230dp"
            android:contentDescription="@string/logo"
            android:maxHeight="@dimen/abc_action_bar_subtitle_bottom_margin_material"
            android:src="@drawable/logo" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnEnter"
            android:layout_width="210dp"
            android:layout_height="90dp"
            android:background="#c7ecb210"
            android:text="@string/play"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnExit"
            android:layout_width="210dp"
            android:layout_height="90dp"
            android:background="#c7ec1306"
            android:text="@string/exit"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
