<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResultsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/results_title_padding"
        android:text="@string/results"
        android:textColor="@color/md_blue_400"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tvBestScoreResultNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llScoreResult"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:textColor="@color/green"
        android:textSize="32sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llScoreResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/score"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvScoreResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="32sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:layout_weight="0.50"
            android:text="@string/results_replay" />

        <Button
            android:id="@+id/btnReturnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/element_margin_separation"
            android:layout_weight="0.50"
            android:text="@string/results_return_menu" />

    </LinearLayout>

</RelativeLayout>
